--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.0",
     "gulp-csscomb": "^3.0.6",
     "gulp-htmlhint": "^0.3.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-postcss": "^6.0.0",
     "gulp-sass": "^2.0.4"
   },
